--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,8 @@ jobs:
       with:
         python-version: '3.8'
 
-    - name: Cache pip
+    - name: Cache pip dependencies
+      id: cache-pip
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
@@ -24,10 +25,10 @@ jobs:
           ${{ runner.os }}-pip-
 
     - name: Install dependencies
+      if: steps.cache-pip.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
-        pip install jsonschema pytest fastjsonschema
+        pip install -r requirements.txt
 
     - name: Run tests
-      run: |
-        pytest tests/test_json_schema.py
+      run: pytest tests/test_json_schema.py
