--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,10 +25,9 @@ jobs:
           ${{ runner.os }}-pip-
 
     - name: Install dependencies
-      if: steps.cache-pip.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run tests
-      run: pytest tests/test_json_schema.py
+      run: python -m pytest tests/test_json_schema.py
